Added more methods into DoublyLinkedList